--- a/index.html
+++ b/index.html
@@ -912,7 +912,7 @@
       <td style="font-family: Tahoma, Geneva, sans-serif; font-size: 14px; line-height: 18px; padding-left: 8px; color: #777777;">
         <div style="color: #f42534; font-weight: bold; border-bottom: 1px solid #f42534; padding-bottom: 4px; margin-bottom: 4px; font-size: 16px; ">Brian Brown</div>
         <div style="font-size: 16px; font-weight: bold; color: #222944; ">Tuckahoe Little League</div>
-        <div>TBD</div>
+        <div>Commissioner of 6/7 Yr Old Baseball</div>
         <div>email:
           <a href="mailto:brian.brown@tuckahoe.org" style="color: #222944; ">brian.brown@tuckahoe.org</a>
         </div>
@@ -927,6 +927,64 @@
   </table>
   <button class="btn pure-button pure-button-primary" data-clipboard-target="#brown">
     Copy Brian Brown's Signature to clipboard
+  </button>
+  <p></p>
+  
+    <table id="piersol">
+    <tr>
+      <td>
+        <a href="http://www.tuckahoe.org">
+          <img id="preview-image-url" src="https://bsbproduction.s3.amazonaws.com/portals/20953/images/60-tll-email-logo.png" style="height: 116px; width: 116px;"
+            alt="Tuckahoe Little League">
+        </a>
+      </td>
+      <td style="font-family: Tahoma, Geneva, sans-serif; font-size: 14px; line-height: 18px; padding-left: 8px; color: #777777;">
+        <div style="color: #f42534; font-weight: bold; border-bottom: 1px solid #f42534; padding-bottom: 4px; margin-bottom: 4px; font-size: 16px; ">Jacob Piersol</div>
+        <div style="font-size: 16px; font-weight: bold; color: #222944; ">Tuckahoe Little League</div>
+        <div>Commissioner of 8 Yr Old Baseball</div>
+        <div>email:
+          <a href="mailto:jacob.piersol@tuckahoe.org" style="color: #222944; ">jacob.piersol@tuckahoe.org</a>
+        </div>
+        <div style="margin-top: 4px; ">
+          <a href="https://www.facebook.com/TuckahoeLittleLeague/"><img width="25" height="25" src="https://bsbproduction.s3.amazonaws.com/portals/20953/images/icons8-facebook-48.png"
+              alt="facebook"></a>
+          <a href="https://www.flickr.com/photos/tuckahoe-little-league/"><img width="25" height="25" src="https://bsbproduction.s3.amazonaws.com/portals/20953/images/icons8-flickr-48.png"
+              alt="flickr"></a>
+        </div>
+      </td>
+    </tr>
+  </table>
+  <button class="btn pure-button pure-button-primary" data-clipboard-target="#brown">
+    Copy Jacob Piersol's Signature to clipboard
+  </button>
+  <p></p>
+  
+    <table id="corcoran">
+    <tr>
+      <td>
+        <a href="http://www.tuckahoe.org">
+          <img id="preview-image-url" src="https://bsbproduction.s3.amazonaws.com/portals/20953/images/60-tll-email-logo.png" style="height: 116px; width: 116px;"
+            alt="Tuckahoe Little League">
+        </a>
+      </td>
+      <td style="font-family: Tahoma, Geneva, sans-serif; font-size: 14px; line-height: 18px; padding-left: 8px; color: #777777;">
+        <div style="color: #f42534; font-weight: bold; border-bottom: 1px solid #f42534; padding-bottom: 4px; margin-bottom: 4px; font-size: 16px; ">Jackie Corcoran@tuckahoe.org</div>
+        <div style="font-size: 16px; font-weight: bold; color: #222944; ">Tuckahoe Little League</div>
+        <div>Volunteer Coordinator</div>
+        <div>email:
+          <a href="mailto:jackie.corcoran@tuckahoe.org" style="color: #222944; ">jackie.corcoran@tuckahoe.org</a>
+        </div>
+        <div style="margin-top: 4px; ">
+          <a href="https://www.facebook.com/TuckahoeLittleLeague/"><img width="25" height="25" src="https://bsbproduction.s3.amazonaws.com/portals/20953/images/icons8-facebook-48.png"
+              alt="facebook"></a>
+          <a href="https://www.flickr.com/photos/tuckahoe-little-league/"><img width="25" height="25" src="https://bsbproduction.s3.amazonaws.com/portals/20953/images/icons8-flickr-48.png"
+              alt="flickr"></a>
+        </div>
+      </td>
+    </tr>
+  </table>
+  <button class="btn pure-button pure-button-primary" data-clipboard-target="#brown">
+    Copy Jackie Corcoran's Signature to clipboard
   </button>
   <p></p>
 
