--- a/index.html
+++ b/index.html
@@ -968,7 +968,7 @@
         </a>
       </td>
       <td style="font-family: Tahoma, Geneva, sans-serif; font-size: 14px; line-height: 18px; padding-left: 8px; color: #777777;">
-        <div style="color: #f42534; font-weight: bold; border-bottom: 1px solid #f42534; padding-bottom: 4px; margin-bottom: 4px; font-size: 16px; ">Jackie Corcoran@tuckahoe.org</div>
+        <div style="color: #f42534; font-weight: bold; border-bottom: 1px solid #f42534; padding-bottom: 4px; margin-bottom: 4px; font-size: 16px; ">Jackie Corcoran</div>
         <div style="font-size: 16px; font-weight: bold; color: #222944; ">Tuckahoe Little League</div>
         <div>Volunteer Coordinator</div>
         <div>email:
