--- a/index.html
+++ b/index.html
@@ -954,7 +954,7 @@
       </td>
     </tr>
   </table>
-  <button class="btn pure-button pure-button-primary" data-clipboard-target="#brown">
+  <button class="btn pure-button pure-button-primary" data-clipboard-target="#piersol">
     Copy Jacob Piersol's Signature to clipboard
   </button>
   <p></p>
@@ -983,7 +983,7 @@
       </td>
     </tr>
   </table>
-  <button class="btn pure-button pure-button-primary" data-clipboard-target="#brown">
+  <button class="btn pure-button pure-button-primary" data-clipboard-target="#corcoran">
     Copy Jackie Corcoran's Signature to clipboard
   </button>
   <p></p>
