add matt to email

--- a/index.html
+++ b/index.html
@@ -985,6 +985,37 @@
   </button>
   <p></p>
 
+  <table id="gouffon">
+    <tr>
+      <td>
+        <a href="http://www.tuckahoe.org">
+          <img id="preview-image-url" src="https://bsbproduction.s3.amazonaws.com/portals/20953/images/tll-email-logo.png"
+            style="height: 116px; width: 116px;" alt="Tuckahoe Little League">
+        </a>
+      </td>
+      <td style="font-family: Tahoma, Geneva, sans-serif; font-size: 14px; line-height: 18px; padding-left: 8px; color: #777777;">
+        <div style="color: #f42534; font-weight: bold; border-bottom: 1px solid #f42534; padding-bottom: 4px; margin-bottom: 4px; font-size: 16px; ">Matt Gouffon</div>
+        <div style="font-size: 16px; font-weight: bold; color: #222944; ">Tuckahoe Little League</div>
+        <div>Commissioner of Minor Softball</div>
+        <div>email:
+          <a href="mailto:matt.gouffon@tuckahoe.org" style="color: #222944; ">matt.gouffon@tuckahoe.org</a>
+        </div>
+        <div style="margin-top: 4px; ">
+          <a href="https://www.facebook.com/TuckahoeLittleLeague/"><img width="25" height="25" src="https://bsbproduction.s3.amazonaws.com/portals/20953/images/icons8-facebook-48.png"
+              alt="facebook"></a> <a href="https://twitter.com/tuckahoeLL"><img width="25" height="25" src="https://bsbproduction.s3.amazonaws.com/portals/20953/images/twitter_logo_whiteonblue48.png"
+              alt="twitter"></a>
+
+          <a href="https://www.flickr.com/photos/tuckahoe-little-league/"><img width="25" height="25" src="https://bsbproduction.s3.amazonaws.com/portals/20953/images/icons8-flickr-48.png"
+              alt="flickr"></a>
+        </div>
+      </td>
+    </tr>
+  </table>
+  <button class="btn pure-button pure-button-primary" data-clipboard-target="#gouffon">
+    Copy Matt Gouffon's Signature to clipboard
+  </button>
+  <p></p>
+
   <table id="edmondson">
     <tr>
       <td>
